--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sudha's Data Analyst Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div id="root"></div>
-  <script src="main.js"></script>
-</body>
+<html>
+  <head>
+    <title>Sudha's Portfolio</title>
+  </head>
+  <body>
+    <h1>Welcome to my portfolio!</h1>
+    <p>Coming soon: Projects, Dashboards & Insights</p>
+  </body>
 </html>
+
