--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,15 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="root"></div>
-  <script src="main.js"></script>
+  <main style="padding: 2rem; font-family: sans-serif;">
+    <h1>Sudha's Data Analyst Portfolio</h1>
+    <p>Welcome! This site will showcase my data analytics projects.</p>
+    <ul>
+      <li>✔️ Job Market Trends (2025)</li>
+      <li>✔️ Netflix Viewing Patterns</li>
+      <li>✔️ Retail Sales Forecasting</li>
+    </ul>
+    <p>More updates coming soon!</p>
+  </main>
 </body>
 </html>
