--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 </head>
 <body>
   <main style="padding: 2rem; font-family: sans-serif;">
-    <h1>Sudha's Data Analyst Portfolio</h1>
-    <p>Welcome! This site will showcase my data analytics projects.</p>
-    <ul>
-      <li>✔️ Job Market Trends (2025)</li>
-      <li>✔️ Netflix Viewing Patterns</li>
-      <li>✔️ Retail Sales Forecasting</li>
-    </ul>
-    <p>More updates coming soon!</p>
+    <h1 style="font-size: 2.25rem; color: #2c3e50;">Welcome to My Data Analyst Portfolio</h1>
+    <p style="font-size: 1rem; color: #555; margin-top: 1rem;">
+      This site is currently under development and will soon feature a collection of real-world data analytics projects, interactive dashboards, and insights showcasing my skills in Python, SQL, Power BI, and more. Stay tuned!
+    </p>
   </main>
 </body>
 </html>
