--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <main style="padding: 2rem; font-family: sans-serif;">
+  <main style="padding: 2rem; font-family: sans-serif; max-width: 600px; margin: auto; text-align: center;">
+    <img src="profile.jpg" alt="Sudha Profile" style="width: 120px; height: 120px; border-radius: 50%; margin-bottom: 1rem;" />
+    
     <h1 style="font-size: 2.25rem; color: #2c3e50;">Welcome to My Data Analyst Portfolio</h1>
     <p style="font-size: 1rem; color: #555; margin-top: 1rem;">
-      This site is currently under development and will soon feature a collection of real-world data analytics projects, interactive dashboards, and insights showcasing my skills in Python, SQL, Power BI, and more. Stay tuned!
+      This site is under development and will soon feature real-world projects, dashboards, and insights. Stay tuned!
     </p>
+
+    <a href="resume.pdf" download style="display: inline-block; margin-top: 1.5rem; padding: 0.5rem 1rem; background: #2c3e50; color: #fff; text-decoration: none; border-radius: 6px;">
+      Download My Resume
+    </a>
   </main>
 </body>
 </html>
