--- a/index.html
+++ b/index.html
@@ -2,22 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sudha's Data Analyst Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #e0f7fa, #fce4ec);
+      color: #2c3e50;
+      text-align: center;
+    }
+    .container {
+      max-width: 700px;
+      margin: 4rem auto;
+      padding: 2rem;
+    }
+    .profile-img {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.1rem;
+      max-width: 90%;
+      margin: 0 auto 2rem auto;
+      color: #555;
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 18px;
+      background-color: #00695c;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: 500;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #004d40;
+    }
+  </style>
 </head>
 <body>
-  <main style="padding: 2rem; font-family: sans-serif; max-width: 600px; margin: auto; text-align: center;">
-    <img src="profile.jpg" alt="Sudha Profile" style="width: 120px; height: 120px; border-radius: 50%; margin-bottom: 1rem;" />
-    
-    <h1 style="font-size: 2.25rem; color: #2c3e50;">Welcome to My Data Analyst Portfolio</h1>
-    <p style="font-size: 1rem; color: #555; margin-top: 1rem;">
-      This site is under development and will soon feature real-world projects, dashboards, and insights. Stay tuned!
+  <div class="container">
+    <img src="profile.png" alt="Profile" class="profile-img" />
+    <h1>Welcome to My Data Analyst Portfolio</h1>
+    <p>
+      This site is currently under development and will soon feature a collection of real-world data analytics projects, interactive dashboards, and insights showcasing my skills in Python, SQL, Power BI, and more. Stay tuned!
     </p>
-
-    <a href="resume.pdf" download style="display: inline-block; margin-top: 1.5rem; padding: 0.5rem 1rem; background: #2c3e50; color: #fff; text-decoration: none; border-radius: 6px;">
-      Download My Resume
-    </a>
-  </main>
+    <a href="resume.pdf" class="btn" download>📄 Download Resume</a>
+  </div>
 </body>
 </html>
